h2. Change Log

Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/

h3. v0. - 2011-03-
* Fix in Key.fetch(): NullPointerException if Key didn't hold a class reference

h3. v0.7.1 - 2011-02-28
* Fix in ObjectFactory: inherited classes were not always resolved correctly

h3. v0.7 - 2011-02-27
* an "ObjectFactory":http://morphia.googlecode.com/svn/site/morphia/apidocs/com/google/code/morphia/ObjectFactory.html is used to create domain instances. Now all domain objects are autowired automatically, also those returned by find* and list methods.
* makeKey method is now deprecated, please use createKey instead
* new instance method: createDBRef
* countAll is now deprecated, please use count instead
* added fromDBObject and toDBObject methods
* added fetch() method to com.google.code.morphia.Key class

h3. v0.6.3 - 2011-02-25
* "GRAILSPLUGINS-2902":http://jira.codehaus.org/browse/GRAILSPLUGINS-2902 Embedded Classes should by default not get @Id injected

h3. v0.6.2 - 2011-02-24
* "GRAILSPLUGINS-2895":http://jira.codehaus.org/browse/GRAILSPLUGINS-2895 recursive check of ancestors to support inherited nesting

h3. v0.6.1 - 2011-02-24
* "GRAILSPLUGINS-2895":http://jira.codehaus.org/browse/GRAILSPLUGINS-2895
** Subclasses don't get the id injected automatically anymore - if the superclass is also managed by the plugin
** You can control the autoinjection process by using the grails.plugins.mongodb.ast.TransformationConfiguration annotation

h3. v0.6 - 2011-02-19
* *PLUGIN RENAMED*: now you will find this plugin as 'mongodb-morphia' in the grails repository
* *breaking change* findByX is no longer synonym for findAllByX, but for findOneByX. So findByX now returns only the first result, and is consistent with find() and findAll() methods.
* support for replica sets