@@ -2,6 +2,6 @@
 #Wed Feb 09 10:46:05 CET 2011
 app.grails.version=1.3.6
 app.name=mongodb-morphia
-app.version=0.7.1
+app.version=0.7.2
 plugins.hibernate=1.3.6
 plugins.tomcat=1.3.6
