@@ -1,0 +1,10 @@
+package org.acme.inheritance
+
+import com.google.code.morphia.annotations.Entity
+
+@Entity("Person")
+class User extends Person {
+
+  String role
+
+}
